--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>3.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.9.0</version> <!-- 최신 안정 버전 -->
+        </dependency>
     </dependencies>
 
     <build>
